--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang class="dew-media dew-wet dew-tab dew-hyper dew-shift fx deepwave">
 <meta charset="utf-8">
-<title>...</title>
+<title>wave</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="color-scheme" content="dark light">
 <meta name="theme-color" content="violet">
@@ -17,7 +17,7 @@
 <link rel="help" href="https://s9a.page/dew">
 
 <nav class="pad" aria-label="template">
-  <a class="pad surfboard dew-lunar surfwave" href="https://webmural.com/music">seek</a>
-  <a class="pad surfboard dew-lunar surfwave" href="https://webmural.com">home</a>
+  <a class="pad surfboard dew-lunar surfwave" href="https://webmural.com/mpf">seek</a>
+  <a class="pad surfboard dew-lunar surfwave" href="https://webmural.com">mural</a>
   <a class="pad surfboard dew-lunar surfwave" href="https://webmural.dev/moon">code</a>
 </nav>
