--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>wave</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="color-scheme" content="dark light">
-<meta name="theme-color" content="violet">
+<meta name="theme-color" content="deepskyblue">
 <meta name="description" content="...">
 <meta name="creator" content="*">
 
