--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <title>wave</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="color-scheme" content="dark light">
+<meta name="color-scheme" content="light">
 <meta name="theme-color" content="deepskyblue">
 <meta name="description" content="...">
 <meta name="creator" content="*">
