wave up from this dream

--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
-<html lang class="dew-media dew-wet dew-tab dew-hyper dew-shift fx deepwave">
+<html lang class="tape-flow tape-blue fx deepwave">
 <meta charset="utf-8">
-<title>wave</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="color-scheme" content="light">
-<meta name="theme-color" content="deepskyblue">
-<meta name="description" content="...">
+<title>wave mural</title>
+<meta name="viewport" content="width=device-width">
+<meta name="color-scheme" content="dark light">
+<meta name="theme-color" content="skyblue">
+<meta name="description" content="wave up from this dream">
 <meta name="creator" content="*">
 
-<style media=(color) data-help="https://s9a.page/dew" data-tag="v0.2.0">
-.dew-shift,.dew-shift *{transition:var(--dew-shift)}.dew-wet,.dew-wet *{background:var(--dew-oil);color:var(--dew-ink)}.dew-rim,.dew-rim *{border-color:var(--dew-rim)}.dew-hyper,.dew-hyper :any-link{filter:var(--dew-hyper)}.dew-tab :focus,.dew-tab:focus{filter:var(--dew-focus);outline-color:var(--dew-locus)}.dew-field:disabled{filter:var(--dew-vapor)}.dew-lunar.dew-lunar,.dew-media.dew-media,.dew-polar.dew-polar,.dew-solar.dew-solar{fill:var(--dew-oil);background:var(--dew-oil);color:var(--dew-ink)}:root{--dew-hyper:none;--dew-media:var(--dew-solar);--dew-polar:var(--dew-lunar);--dew-oil:var(--dew-media);--dew-ink:var(--dew-polar);--dew-rim:var(--dew-ink);--dew-shift:none;--dew-solar:hotpink;--dew-lunar:#201;--dew-locus:currentColor;--dew-focus:invert(100%);--dew-hover:none;--dew-vapor:opacity(60%)}:any-link:hover{--dew-hyper:var(--dew-hover)}:any-link:focus{--dew-hyper:var(--dew-focus)}.dew-media{--dew-oil:var(--dew-media);--dew-ink:var(--dew-polar)}.dew-polar{--dew-oil:var(--dew-polar);--dew-ink:var(--dew-media)}.dew-solar{--dew-oil:var(--dew-solar);--dew-ink:var(--dew-lunar)}.dew-lunar{--dew-oil:var(--dew-lunar);--dew-ink:var(--dew-solar)}@media (prefers-color-scheme:dark){:root{--dew-media:var(--dew-lunar);--dew-polar:var(--dew-solar)}}
+<style media=(color) data-imagine=https://s9a.org/tape/releases/tag/v0.5.0>
+:root{--tape-black:#090909;--tape-white:#e9e9e9;--tape-pink:#fbbfff;--tape-yellow:#eee833;--tape-blue:#11dff1;--tape-green:#44f477;--tape-filter:none;--tape-mix:transparent}@media (prefers-contrast:less){:root{--tape-white:#dcdcdc;--tape-black:#181818}}.tape-black,.tape-white{--tape-hex:var(--tape-white)}.tape-blue{--tape-hex:var(--tape-blue)}.tape-pink{--tape-hex:var(--tape-pink)}.tape-green{--tape-hex:var(--tape-green)}.tape-yellow{--tape-hex:var(--tape-yellow)}.tape-flat{border-color:transparent}.tape-flap{border-color:currentColor}.tape-flow{--tape-remix:none}.tape-flow :not(.tape-skip){background-color:transparent;color:inherit}.tape-black,.tape-blue,.tape-pink,.tape-green,.tape-yellow,.tape-white{--tape-mix:var(--tape-hex);--tape-remix:none;color:var(--tape-black)!important;background-color:var(--tape-mix)!important;background-image:var(--tape-remix);filter:var(--tape-filter)}.tape-black{--tape-mix:var(--tape-black);color:var(--tape-hex)!important}.tape-erase,.tape-erase *{color:transparent!important}
 </style>
 
 <link rel="stylesheet" href="wave.css">
-<link rel="icon" href="icon.svg">
-<link rel="help" href="https://s9a.page/dew">
+<link rel="help" href="https://s9a.page/tape">
+<link rel="icon" href="moons.svg">
+<link rel="next" href="/buoy">
 
-<nav class="pad" aria-label="template">
-  <a class="pad surfboard dew-lunar surfwave" href="https://webmural.com/mpf">seek</a>
-  <a class="pad surfboard dew-lunar surfwave" href="https://webmural.com">mural</a>
-  <a class="pad surfboard dew-lunar surfwave" href="https://webmural.dev/moon">code</a>
+<nav class="pad" aria-label="wave hand">
+  <a class="pad surf wave tape-blue" href="https://webmural.com/phantombra">cue</a>
+  <a class="pad surf wave tape-blue" href="https://webmural.com/mpf">seek</a>
+  <a class="pad surf wave tape-blue" href="https://webmural.com">mural</a>
+  <a class="pad surf wave tape-blue" href="https://webmural.com/fwdkiss">believe</a>
+  <a class="pad surf wave tape-blue" href="https://webmural.com/code">code</a>
 </nav>
