--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang class="tape-flow tape-blue fx deepwave">
+<html lang class="tape-flow tape-blue local">
 <meta charset="utf-8">
 <title>wave mural</title>
 <meta name="viewport" content="width=device-width">
@@ -17,10 +17,22 @@
 <link rel="icon" href="moons.svg">
 <link rel="next" href="/buoy">
 
-<nav class="pad" aria-label="wave hand">
-  <a class="pad surf wave tape-blue" href="https://webmural.com/phantombra">cue</a>
-  <a class="pad surf wave tape-blue" href="https://webmural.com/mpf">seek</a>
-  <a class="pad surf wave tape-blue" href="https://webmural.com">mural</a>
-  <a class="pad surf wave tape-blue" href="https://webmural.com/fwdkiss">believe</a>
-  <a class="pad surf wave tape-blue" href="https://webmural.com/code">code</a>
-</nav>
+<article>
+  <nav class="doll dill" aria-label="wave hand">
+    <span class="roll">
+      <a class="surf wave tape-white" href="https://webmural.com/phantombra">cue</a>
+      <a class="surf wave tape-white" href="https://webmural.com/mpf">seek</a>
+      <a class="surf wave tape-white" href="https://webmural.com">mural</a>
+      <a class="surf wave tape-white" href="https://webmural.com/jellyfish">believe</a>
+      <a class="surf wave tape-white" href="https://webmural.com/code">code</a>
+    </span>
+  </nav>
+  <footer class="doll dill">
+    <span class="roll">
+      <a class="surf wave tape-pink" href="/dialon">wave up</a>
+      <a class="surf wave tape-pink" href="/fwdkiss">from this</a>
+      <a class="surf wave tape-pink" href="/dream">dream</a>
+    </span>
+  </footer>
+</article>
+
